# RDycore

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  DISCLAIMER  LETKF_DRIVER_PLAN.md  LICENSE  README.md  codecov.yml  index.html  installation.html  mkdocs.yml
build_opt/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake
cmake/: FindPETSc.cmake  add_formatting_targets.cmake  add_memcheck_target.cmake  code_coverage.cmake  extract_mpi_include_directories.cmake  extract_petsc_variable.cmake  generate_cyaml_sediment_fields.cmake  generate_cyaml_tracer_fields.cmake  generate_msh.cmake
common/: input.html  installation.html  mms.html
config/: install.aurora.openapi.opt.32bit.sh  install.aurora.openapi.opt.64bit.sh  install.frontier.craygnu-mphipcc.debug.64bit.sh  install.frontier.craygnu-mphipcc.hdf5_1_14_3.debug.64bit.sh  install.frontier.craygnu-mphipcc.hdf5_1_14_3.opt.64bit.sh  install.frontier.craygnu-mphipcc.opt.32bit.sh  install.frontier.craygnu-mphipcc.opt.64bit.sh  install.frontier.gnugpu.debug.32bit.sh  install.frontier.gnugpu.debug.64bit.sh  install.frontier.gnugpu.opt.32bit.sh  install.frontier.gnugpu.opt.64bit.sh  install.pm-cpu.gnu.debug.32bit.sh  install.pm-cpu.gnu.debug.64bit.sh  install.pm-cpu.gnu.hdf5_1_14_3.debug.64bit.sh  install.pm-cpu.gnu.hdf5_1_14_3.opt.64bit.sh  install.pm-cpu.gnu.no_debug.32bit.sh  install.pm-cpu.gnu.opt.32bit.sh  install.pm-cpu.gnu.opt.64bit.sh  install.pm-gpu.gnugpu.debug.32bit.sh  install.pm-gpu.gnugpu.debug.64bit.sh  install.pm-gpu.gnugpu.hdf5_1_14_3.debug.64bit.sh  install.pm-gpu.gnugpu.hdf5_1_14_3.opt.64bit.sh  install.pm-gpu.gnugpu.opt.32bit.sh  install.pm-gpu.gnugpu.opt.64bit.sh  modules.frontier.craygnu-mphipcc  modules.frontier.gnugpu  modules.pm-cpu.gnu  modules.pm-gpu.gnugpu  set_petsc_settings.sh
developer/: ceed.html  development.html  e3sm.html  index.html  mesh.html  operators.html  organization.html  style.html  tools.html
docs/: index.md  installation.md
driver/: CMakeLists.txt  amr.c  letkf_test.c  main.F90  main.c  main_da.c  mms.F90  mms.c
driver/tests/: CMakeLists.txt
driver/tests/amr/: CMakeLists.txt  amr_dx1.yaml
driver/tests/bad_input/: CMakeLists.txt  nonexistent_boundary.yaml
driver/tests/heat/: CMakeLists.txt  check_heat_mms_convergence.py  heat_coupling_interval.yaml  heat_mms_conv_study.yaml  heat_snes_mms.yaml  heat_ts_mms.yaml  test_heat_coupling.c
driver/tests/letkf/: CMakeLists.txt
driver/tests/sd/: CMakeLists.txt  sd_mms_conv_study.yaml
driver/tests/sediment/: CMakeLists.txt  sediment.yaml  sediment_ic_file.yaml  sediment_mms_conv_study.yaml  sediment_upwind_mms_conv_study.yaml
driver/tests/swe_roe/: CMakeLists.txt  Houston1km.DirichletBC.adaptive_timestep.yaml  Houston1km.DirichletBC.yaml  Simons.OceanDirichletBC.yaml  ex1.yaml  ex2b-ensemble.yaml  ex2b.yaml  ex2b_checkpoint.yaml  ex2b_dirichlet_bc.yaml  ex2b_ic_file.yaml  ex2b_ic_file_with_adapt.yaml  flume_flood.yaml  flume_flood_0.yaml  four_mounds_60x24.yaml  four_mounds_60x24_no_friction.yaml  letkf_dam_break.yaml  mixed_elements.yaml  mixed_elements_ic_file.yaml  mixed_elemnts_ic_file.yaml  mms_conv_study.yaml  mms_conv_study_second_order.yaml  mms_dx1.yaml  mms_single_run.yaml  parabolic_bowl.yaml  planar_dam.geo  quad_tri_mesh.yaml
include/: rdycore.h  rdycore.h.in
plans/: genesis-mission-foa-response-plan.md  particle-tracers-plan.md  rdycore-letkf-integration-plan.md
search/: search_index.json
share/: CMakeLists.txt
src/: CMakeLists.txt  ceed.c  cgns_output.c  checkpoint.c  courant.c  ensemble.c  mms.c  operator.c  operator_ceed.c  operator_data.c  operator_diagnostics.c  operator_fluxes_ceed.c  operator_fluxes_hydro_recon_ceed.c  operator_fluxes_petsc.c  operator_ifunction_petsc.c  operator_petsc.c  operator_sources_ceed.c  operator_sources_hydro_recon_ceed.c  operator_sources_petsc.c  operators.c  parse_config_file.c  petsc_operator.c  physics_swe.c  print_config.c  rdyadvance.c  rdyamr.c  rdycore.F90  rdycore.c  rdydata.c  rdydm.c  rdyfprintf.c  rdymesh.c  rdymms.c  rdyparticles.c  rdyprintf.c  rdyrefine.c  rdyrun.c  rdysetup.c  read_config_file.c  rhs_function.c  (+10 more)
src/f90-mod/: CMakeLists.txt  rdycore.F90
src/f90-mod/tests/: CMakeLists.txt  coupling.yaml  test_coupling.F90
src/forcing/: CMakeLists.txt  rdyforcing.c  rdyforcing_dataset.c  rdyforcing_map.c
src/heat/: heat_petsc.c
src/sediment/: sediment_ceed.c  sediment_ceed.h  sediment_ceed.h.in  sediment_ceed_impl.h  sediment_fluxes_ceed.h  sediment_petsc.c  sediment_petsc_impl.h  sediment_roe_ceed_impl.h  sediment_roe_flux_ceed.h  sediment_roe_flux_petsc.h  sediment_roe_petsc_impl.h  sediment_sources_ceed.h  sediment_types_ceed.h  sediment_types_petsc.h
src/swe/: physics_swe.c  swe.c  swe_ceed.c  swe_ceed.h.in  swe_ceed_impl.h  swe_ceed_operators.c  swe_flux_ceed.h  swe_flux_petsc.c  swe_flux_petsc.h  swe_fluxes_ceed.h  swe_fluxes_hydro_recon_ceed.h  swe_hll_ceed_impl.h  swe_hll_petsc_impl.h  swe_hllc_ceed_impl.h  swe_hllc_petsc_impl.h  swe_muscl_fluxes_ceed.h  swe_operators.c  swe_operators.h  swe_operators_impl.h  swe_petsc.c  swe_petsc_impl.h  swe_roe_ceed_impl.h  swe_roe_flux_ceed.h  swe_roe_flux_petsc.h  swe_roe_petsc_impl.h  swe_setup_ceed.h  swe_sources_ceed.h  swe_sources_hydro_recon_ceed.h  swe_types_ceed.h  swe_types_petsc.h  swe_well_balance.h  swe_well_balancing.h
src/tests/: CMakeLists.txt  planar_dam_particles.yaml  rdycore_tests.h  test_particle_advance.c  test_particle_swarm.c  test_rdyinit.c  test_rdyinitnoarguments.c  test_rdymesh.c  test_read_config_file.c  test_yaml_input.c
src/tracer/: tracer_ceed.c  tracer_ceed.h  tracer_fluxes_ceed.h  tracer_fluxes_hydro_recon_ceed.h  tracer_petsc.c  tracer_roe_flux_ceed.h  tracer_roe_flux_petsc.h  tracer_sources_ceed.h  tracer_sources_hydro_recon_ceed.h  tracer_types_ceed.h  tracer_types_petsc.h
src/tracers/: tracers_ceed.c  tracers_fluxes_ceed.h  tracers_petsc.c  tracers_roe_flux_ceed.h  tracers_sources_ceed.h  tracers_types_ceed.h
theory/: index.html  sediment.html  swe.html
tools/: Dockerfile.petsc  README.md  (+3 more)
(+1233 files in other folders)
